2009-05-20  Alan McGovern  <amcgovern@novell.com>

	* Helper.cs: If the type specified in the TypeConverter
	  attribute is not of the correct type, bail out instead of
	  throwing an InvalidCastException

2009-05-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Kind.cs: Regenerated.

2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Updated.

2009-05-16  Alan McGovern  <amcgovern@novell.com>

	* Types.cs:
	* NativeMethods.cs:
	* ManagedXamlLoader.cs:
	* GeneratedPInvokes.cs:
	* MoonlightTypeConverter.cs: Add type converting to
	  ObjectKeyFrame. The conversion is done during the Resolve
	  phase. If the type conversion can't be completed an
	  exception is thrown.

2009-05-15  Alan McGovern  <amcgovern@novell.com>

	* NativeDependencyObjectHelper.cs: The Keyframes property of
	  ObjectAnimationUsingKeyframes needs to be autogenerated.

2009-05-13  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: Top level objects are now passed in as
	Value*s instead of magical IntPtrs.
	- Add some try/catching to reduce spew, now sure exactly why this is
	happening, but i know everyone will be pissed about all the spew.

2009-05-13  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: Don't look in base classes for event
	handlers.

2009-05-06  Chris Toshok  <toshok@ximian.com>

	* ManagedXamlLoader.cs (ConvertType): if value is null, just
	return it.

2009-05-05  Alan McGovern  <amcgovern@novell.com>

	* NativeDependencyObjectHelper.cs: Back out the default value
	  fix until the parser can be updated to handle this.

2009-05-03  Chris Toshok  <toshok@ximian.com>

	* Types.cs: more on that generic type fix.  look up the generic
	type definition in our list of registered types.  This is as