@@ -97,6 +97,7 @@ namespace Mono {
 		FFMPEGDECODER,
 		FFMPEGDEMUXER,
 		FILESOURCE,
+		FLOAT,
 		FONTFAMILY,
 		FONTSOURCE,
 		FONTSTRETCH,
