@@ -121,6 +121,7 @@ public:
 		FFMPEGDECODER,
 		FFMPEGDEMUXER,
 		FILESOURCE,
+		FLOAT,
 		FONTFAMILY,
 		FONTSOURCE,
 		FONTSTRETCH,
