@@ -357,6 +357,7 @@ public:
 
 	bool		AsBool ()	{ checked_get_exact (Type::BOOL, false, (bool)u.i32); }
 	double 		AsDouble ()	{ checked_get_exact (Type::DOUBLE, 0.0, u.d); }
+	float 		AsFloat ()	{ checked_get_exact (Type::FLOAT, 0.0, u.f); }
 	guint64		AsUInt64 ()	{ checked_get_exact (Type::UINT64, 0, u.ui64); }
 	gint64		AsInt64 ()	{ checked_get_exact (Type::INT64, 0, u.i64); }
 	TimeSpan	AsTimeSpan ()	{ checked_get_exact (Type::TIMESPAN, 0, (TimeSpan)u.i64); }
@@ -652,6 +653,7 @@ public:
 	
 	union {
 		double d;
+		float f;
 		guint64 ui64;
 		gint64 i64;
 		guint32 ui32;
