@@ -1,3 +1,10 @@
+2009-05-20  Alan McGovern  <amcgovern@novell.com>
+
+	* type.h:
+	* value.h:
+	* value.h.in:
+	* type-generated.cpp: Register 'float' as a known type
+
 2009-05-19  Larry Ewing  <lewing@novell.com>
 
 	* collection.cpp: avoid some GetDeployment calls in looping cases.
